tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_cannot_assign_unconstrained_and_regular_fn_to_variable/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Expected type fn() -> (), found type unconstrained fn() -> ()
  ┌─ src/main.nr:3:44
  │
3 │         let _func = if true { foo } else { bar };
  │                                            ---
  │
  = Expected the types of both if branches to be equal

Aborting due to 1 previous error
